fix: fixed safari scrollbar rendering

--- a/src/index.css
+++ b/src/index.css
@@ -78,9 +78,38 @@
     * {
         @apply border-border;
     }
+
+    html {
+        overflow: auto;
+    }
+
     body {
         @apply bg-background text-foreground;
         font-family: Outfit, sans-serif;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0px;
+        left: 0px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+
+    ::-webkit-scrollbar {
+        width: 7px;
+    }
+
+    ::-webkit-scrollbar-track {
+        visibility: hidden; /* doesn't seem to work */
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background: rgba(0, 0, 0, 0.5);
+    }
+
+    ::-webkit-scrollbar:window-inactive {
+        visibility: hidden;
     }
 }
 
